traces/bug_190.txt
#190
kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:6469: error: Dead Store
  The value written to `&opaque` (type `unsigned int`) is never used.

kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:6469:25: Write of unused value
6467.             "Failed to open DCP consumer connection!");
6468.     add_stream_for_consumer(
6469.             h, cookie1, opaque++, Vbid(0), 0, cb::mcbp::Status::Success);
                              ^
6470. 
6471.     std::string opaqueStr("eq_dcpq:" + name + ":stream_0_opaque");
